--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu:wght@300;400;500;700&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  background-color: #141414;
+}
+
+html,
+body,
+#root {
+  height: 100%;
 }
