--- a/src/App.scss
+++ b/src/App.scss
@@ -4,11 +4,14 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  background-color: #141414;
 }
 
 html,
 body,
 #root {
   height: 100%;
+}
+
+:root {
+  --bg-dark: #141414;
 }
