--- a/src/pages/profiles/styles.module.scss
+++ b/src/pages/profiles/styles.module.scss
@@ -20,6 +20,11 @@
   .profilesContainer {
     display: flex;
     gap: 50px;
+
+    & > a {
+      text-decoration: none;
+      color: inherit;
+    }
   }
 
   .manageProfilesBox {
