--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -56,11 +56,12 @@
       cursor: pointer;
     }
 
-    .profileDropdown {
+    .profileWrapper {
       display: flex;
       align-items: center;
       gap: 6px;
       cursor: pointer;
+      position: relative;
 
       img {
         height: 32px;
@@ -76,6 +77,114 @@
       &:hover {
         .caret {
           transform: rotate(180deg);
+        }
+        .dropdownWrapper {
+          display: block;
+        }
+      }
+
+      .dropdownWrapper {
+        position: absolute;
+        top: 32px;
+        right: 0;
+        padding-top: 20px;
+        cursor: default;
+        overflow: hidden;
+        background: transparent;
+        display: none;
+        animation-name: expand;
+        animation-duration: 0.4s;
+        animation-timing-function: linear;
+        animation-fill-mode: forwards;
+
+        @keyframes expand {
+          0% {
+            height: 0;
+          }
+          100% {
+            height: 396px;
+          }
+        }
+
+        .profileDropdown {
+          position: relative;
+          box-shadow: 0 0 0.5px 0 #eeeeee;
+          background: var(--bg-dark);
+          width: 220px;
+          cursor: default;
+
+          .itemsContainer {
+            display: flex;
+            flex-direction: column;
+            padding: 15px 15px 0;
+            gap: 12px;
+
+            .profiles {
+              display: flex;
+              align-items: center;
+              gap: 10px;
+              cursor: pointer;
+              width: max-content;
+
+              &:hover {
+                p {
+                  text-decoration: underline;
+                }
+              }
+
+              & > img {
+                height: 35px;
+                width: auto;
+              }
+
+              & > p {
+                font-size: 14px;
+              }
+            }
+
+            .utilityItems {
+              display: flex;
+              align-items: center;
+              gap: 17px;
+              cursor: pointer;
+              width: max-content;
+
+              &:hover {
+                p {
+                  text-decoration: underline;
+                }
+              }
+
+              .utilityIcons {
+                font-size: 28px;
+                color: #979797;
+              }
+
+              & > p {
+                font-size: 14px;
+              }
+            }
+          }
+
+          .signOut {
+            margin-top: 20px;
+            text-align: center;
+            padding: 18px 0;
+            font-size: 14px;
+            border-top: 1px solid rgba(238, 238, 238, 0.3);
+            cursor: pointer;
+
+            &:hover {
+              text-decoration: underline;
+            }
+          }
+
+          .dropdownCaret {
+            position: absolute;
+            top: -15px;
+            right: 25px;
+            font-size: 16px;
+          }
         }
       }
     }
