--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -1,3 +1,11 @@
-img {
-  width: 100%;
+
+
+.container{
+
+  background-color: #141414;
+
+  .startImage {
+    width: 100%;
+    height: 98%;
+  }
 }
