--- a/src/components/Home/Popular-Movies/styles.module.scss
+++ b/src/components/Home/Popular-Movies/styles.module.scss
@@ -1,58 +1,61 @@
 .PMwrapper {
-  position: relative;
   padding: 10px 40px 10px 40px;
+  background: #141414;
 
-
-  .heading{
-
+  .heading {
     font-family: Ubuntu;
     color: white;
     font-weight: 600;
     font-size: 25px;
     margin-bottom: 15px;
-
+    margin-top: -180px;
   }
-  .cardsContainer {
-    display: flex;
-    gap: 10px;
-    scroll-behavior: smooth;
-    overflow-x: scroll;
 
-    &::-webkit-scrollbar {
-      display: none;
-    }
+  & > div {
+    position: relative;
+    z-index: 2;
 
-    button {
+    .cardsContainer {
       display: flex;
-      align-items: center;
-      justify-content: center;
-      position: absolute;
-      height: 250px;
-      width: 50px;
-      cursor: pointer;
-      border: none;
-      top: 178px;
-      transform: translateY(-50%);
-      background-color: rgba($color: #000000, $alpha: 0.15);
-      font-size: 37px;
-      font-weight: 900;
-    }
+      gap: 20px;
+      scroll-behavior: smooth;
+      overflow-x: scroll;
+      height: max-content;
 
-    .buttonIcons {
-      color: white;
-      font-size: 50px;
-    }
+      &::-webkit-scrollbar {
+        display: none;
+      }
 
-    .prevButton {
-      left: 40px;
-      border-radius: 0 5px 5px 0;
-      // box-shadow: 1.5px 0 3px 1px #c4c4c4;
-    }
+      button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        height: 250px;
+        width: 50px;
+        cursor: pointer;
+        border: none;
+        top: 125px;
+        transform: translateY(-50%);
+        background-color: rgba($color: #000000, $alpha: 0.15);
+        font-size: 37px;
+        font-weight: 900;
+      }
 
-    .nextButton {
-      right: 40px;
-      border-radius: 5px 0 0 5px;
-      // box-shadow: -1.5px 0 3px 1px #c4c4c4;
+      .buttonIcons {
+        color: white;
+        font-size: 50px;
+      }
+
+      .prevButton {
+        left: 0px;
+        border-radius: 0 5px 5px 0;
+      }
+
+      .nextButton {
+        right: 0px;
+        border-radius: 5px 0 0 5px;
+      }
     }
   }
 }
