--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -4,16 +4,30 @@
   iframe {
     height: 700px;
     width: 100%;
-    background: linear-gradient();
+    pointer-events: none;
   }
 }
 
 .blurContainer {
-  height: 60px;
+  height: 200px;
   position: absolute;
-  top: 670px;
+  top: 590px;
   width: 100%;
   z-index: 1;
-  backdrop-filter: blur(12px);
-  -webkit-backdrop-filter: blur(12px);
+  background: linear-gradient(
+    rgba(20, 20, 20, 0),
+    rgba(20, 20, 20, 0.1),
+    rgba(20, 20, 20, 0.2),
+    rgba(20, 20, 20, 0.3),
+    rgba(20, 20, 20, 0.4),
+    rgba(20, 20, 20, 0.5),
+    rgba(20, 20, 20, 0.6),
+    rgba(20, 20, 20, 0.5),
+    rgba(20, 20, 20, 0.4),
+    rgba(20, 20, 20, 0.3),
+    rgba(20, 20, 20, 0.2),
+    rgba(20, 20, 20, 0.1),
+    rgba(20, 20, 20, 0)
+  );
+  backdrop-filter: blur(4px);
 }
