resolved height issue of cards container

--- a/src/components/Home/Popular-Movies/styles.module.scss
+++ b/src/components/Home/Popular-Movies/styles.module.scss
@@ -19,6 +19,7 @@
     scroll-behavior: smooth;
     overflow-x: scroll;
     overflow-y: hidden;
+    height: 280px;
 
     &::-webkit-scrollbar {
       display: none;
