enhanced the video view

--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -1,6 +1,8 @@
 .videoContainer {
   iframe {
-    height: 700px;
+    margin-top: -110px;
+    margin-bottom: -100px;
+    height: 850px;
     width: 100%;
     pointer-events: none;
   }
