--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -1,5 +1,5 @@
 .bgDark {
-  background: var(--bg-dark);
+  background: var(--bg-dark) !important;
 }
 
 .lowOpacity {
@@ -18,6 +18,11 @@
   transition: all 0.3s ease-in-out;
   user-select: none;
   z-index: 100;
+  background: linear-gradient(
+    to bottom,
+    rgba(20, 20, 20, 0.6),
+    rgba(20, 20, 20, 0)
+  );
 
   .logo {
     height: 30px;
