--- a/src/components/commons/Movie-Card/styles.module.scss
+++ b/src/components/commons/Movie-Card/styles.module.scss
@@ -1,7 +1,112 @@
-img {
-  width: 200px;
-  height: 280px;
-  border-radius: 5px;
-  object-fit: cover;
+.movieCardWrapper {
   cursor: pointer;
+  width: 200px;
+  position: relative;
+
+  &:hover {
+    .detailsContainer {
+      position: absolute;
+      display: flex;
+    }
+  }
+
+  img {
+    width: 200px;
+    height: 280px;
+    border-radius: 5px;
+    object-fit: cover;
+  }
+
+  .detailsContainer {
+    bottom: 0;
+    background: var(-bg--dark);
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    padding: 12px 0;
+    display: none;
+
+    .ctaContainer {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 40px;
+
+      * {
+        border: 1.5px solid #949494;
+        border-radius: 50%;
+        padding: 8px;
+        display: flex;
+        background: #2a2a2a;
+        transition: outline 0.2s ease-in-out;
+
+        &:hover {
+          outline: 1.5px solid #ffffff;
+        }
+      }
+
+      .playButton {
+        color: var(-bg--dark) !important;
+        background: #ffffff;
+        padding: 5px;
+      }
+
+      .thumbsIcon {
+        color: #ffffff;
+      }
+
+      .plusIcon {
+        color: #ffffff;
+      }
+
+      .downIcon {
+        margin-left: auto;
+        color: #ffffff;
+      }
+    }
+
+    .title {
+      font-family: Ubuntu;
+      color: #ffffff;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      line-clamp: 1;
+      -webkit-line-clamp: 1;
+      overflow: hidden;
+      font-size: 16px;
+      font-weight: 300;
+    }
+
+    .genresContainer {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 10px;
+      line-height: 10px;
+      max-height: 42px;
+
+      .genre {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+
+        &:first-child {
+          .dotIcon {
+            display: none;
+          }
+        }
+
+        .genreTitle {
+          font-size: 14px;
+          font-family: Ubuntu;
+          color: #ffffff;
+          font-weight: 300;
+        }
+
+        .dotIcon {
+          color: #8f8f8f;
+        }
+      }
+    }
+  }
 }
