--- a/src/components/commons/Movie-Card/styles.module.scss
+++ b/src/components/commons/Movie-Card/styles.module.scss
@@ -1,30 +1,27 @@
-.movieCardWrapper {
+.expandedContainer {
   cursor: pointer;
-  width: 200px;
+  width: 350px;
   position: relative;
 
-  &:hover {
-    .detailsContainer {
-      position: absolute;
-      display: flex;
-    }
-  }
-
-  img {
-    width: 200px;
-    height: 280px;
+  .expandedImageContainer {
+    width: 350px;
+    height: 300px;
     border-radius: 5px;
-    object-fit: cover;
+    object-fit: fill;
   }
 
   .detailsContainer {
-    bottom: 0;
+    position: relative;
+    top: -5px;
+    padding: 12px 12px;
     background: var(-bg--dark);
     display: flex;
     flex-direction: column;
     gap: 12px;
-    padding: 12px 0;
-    display: none;
+    border-radius: 5%;
+    -webkit-box-shadow: 0px 0px 56px -12px rgba(0, 0, 0, 1);
+    -moz-box-shadow: 0px 0px 56px -12px rgba(0, 0, 0, 1);
+    box-shadow: 0px 0px 56px -12px rgba(0, 0, 0, 1);
 
     .ctaContainer {
       display: flex;
@@ -108,5 +105,17 @@
         }
       }
     }
+  }
+}
+
+.contractedContainer {
+  cursor: pointer;
+  width: 200px;
+  position: relative;
+
+  .contractedImageContainer {
+    width: 200px;
+    height: 280px;
+    object-fit: cover;
   }
 }
