--- a/src/components/Home/Popular-Movies/styles.module.scss
+++ b/src/components/Home/Popular-Movies/styles.module.scss
@@ -24,15 +24,16 @@
     color: white;
     font-weight: 600;
     font-size: 25px;
-    margin-bottom: 15px;
+    margin-bottom: -15px;
   }
 
   .cardsContainer {
     display: flex;
-    gap: 12px;
+    gap: 8px;
     scroll-behavior: smooth;
     overflow-x: scroll;
-    overflow-y: hidden;
+    height: 550px;
+    padding-top: 50px;
 
     &::-webkit-scrollbar {
       display: none;
@@ -44,10 +45,10 @@
       justify-content: center;
       position: absolute;
       width: 50px;
-      height: 280px;
+      height: 286px;
       cursor: pointer;
       border: none;
-      top: 193px;
+      top: 217px;
       transform: translateY(-50%);
       background-color: rgba($color: #000000, $alpha: 0.15);
       font-size: 37px;
