minor css update

--- a/src/components/commons/Movie-Card/styles.module.scss
+++ b/src/components/commons/Movie-Card/styles.module.scss
@@ -7,6 +7,8 @@
   &:hover {
     .movieCardWrapper {
       transform: scale(1.2);
+      position: relative;
+      z-index: 1;
 
       .detailsContainer {
         display: flex;
