--- a/src/components/commons/Movie-Card/styles.module.scss
+++ b/src/components/commons/Movie-Card/styles.module.scss
@@ -6,12 +6,19 @@
 
   &:hover {
     .movieCardWrapper {
+      width: 120%;
       transform: scale(1.2);
       position: relative;
       z-index: 1;
+      box-shadow: 0 0 5px 0 #000000;
+
+      img {
+        border-radius: 5px 5px 0 0;
+      }
 
       .detailsContainer {
         display: flex;
+        box-shadow: 0 0 5px 0 #000000;
       }
     }
   }
@@ -20,16 +27,17 @@
     height: 100%;
     width: 100%;
     cursor: pointer;
-    transition: transform 0.25s ease-in-out;
+    transition: all 0.25s ease-in-out;
 
     img {
+      width: 100%;
       height: 100%;
-      width: auto;
       border-radius: 5px;
       object-fit: cover;
     }
 
     .detailsContainer {
+      margin-top: -5px;
       background: #141414 !important;
       flex-direction: column;
       gap: 12px;
