--- a/src/components/commons/movieDetailModal/styles.module.scss
+++ b/src/components/commons/movieDetailModal/styles.module.scss
@@ -1,19 +1,38 @@
-.overlyStyles {
-  position: 'fixed';
+.modalBackdrop {
+  position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
   bottom: 0;
-  background-color: 'rgba(0, 0, 0, .7)';
-  z-index: 1000;
+  right: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  z-index: 11;
 
-  .modalStyles {
-    position: 'fixed';
-    top: '50%';
-    left: '50%';
-    transform: 'translate(-50%; -50%)';
-    background-color: '#FFF';
-    padding: '50px';
-    z-index: 2000;
-  }
+}
+
+.modalContent {
+  position: fixed;
+  z-index: 12;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+  background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 20px 40px;
+  min-width: 450px;
+  max-width: 500px;
+  border-radius: 10px;
+  box-shadow: 1px 3px 10px 0px #787878;
+  color: var(--almost-black);
+  animation-name: slide-up;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
