--- a/src/components/commons/movieDetailModal/styles.module.scss
+++ b/src/components/commons/movieDetailModal/styles.module.scss
@@ -8,31 +8,106 @@
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.3);
   z-index: 11;
-
 }
 
 .modalContent {
   position: fixed;
   z-index: 12;
-  top: 50%;
+  top: 15%;
   left: 50%;
   transform: translate(-50%);
   background: #ffffff;
   display: flex;
   flex-direction: column;
   gap: 15px;
-  padding: 20px 40px;
-  min-width: 450px;
-  max-width: 500px;
+  width: 900px;
+  height: -webkit-fill-available;
   border-radius: 10px;
   box-shadow: 1px 3px 10px 0px #787878;
-  color: var(--almost-black);
+  background: var(--bg-dark);
   animation-name: slide-up;
   animation-duration: 0.5s;
   animation-timing-function: ease-in-out;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+
+  img {
+    width: 100%;
+    height: 56.25%;
+    object-fit: cover;
+  }
+
+  .blurContainer {
+    height: 50px;
+    margin-top: 322px;
+    position: absolute;
+    width: 100%;
+    background: linear-gradient(
+      to bottom,
+      rgba(20, 20, 20, 0),
+      rgb(20, 20, 20)
+    );
+    backdrop-filter: blur(4px);
+  }
+  .overviewContainer {
+    padding: 20px 40px;
+    display: flex;
+    gap: 40px;
+    font-family: Ubuntu;
+    word-spacing: 2px;
+
+    .firstColumn {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      width: 60%;
+
+      .statsContainer {
+        display: flex;
+        color: white;
+        font-size: 20px;
+      }
+      .storyDescription {
+        color: white;
+        font-size: 15px;
+        display: inline-flex;
+      }
+    }
+
+    .secondColumn {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      width: 40%;
+      color: white;
+      padding: 0px 0px 0px 20px;
+
+      .genresContainer {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        span {
+          font-size: 20px;
+          margin-bottom: 10px;
+        }
+        .genres {
+          display: flex;
+          flex-wrap: wrap;
+          align-items: center;
+          gap: 10px;
+          line-height: 10px;
+          max-height: 42px;
+
+          .genreTitle {
+            font-size: 12px;
+            color: #ffffff;
+            font-weight: 300;
+          }
+        }
+      }
+    }
+  }
 }
