added generic fold section. needs work around for blurContainer

--- a/src/components/Home/Generic-Movies/styles.module.scss
+++ b/src/components/Home/Generic-Movies/styles.module.scss
@@ -10,6 +10,10 @@
     );
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
+
+    &:not(:first-child) {
+      display: none;
+    }
   }
   
   .PMwrapper {
