--- a/src/components/commons/movieDetailModal/styles.module.scss
+++ b/src/components/commons/movieDetailModal/styles.module.scss
@@ -33,7 +33,6 @@
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
   overflow-y: scroll;
-  
 
   img {
     width: 100%;
@@ -110,98 +109,93 @@
     &:hover {
       outline: 3.5px solid #ffffff;
     }
+  }
 }
-  }
 
-  .blurContainer {
-    height: 50px;
-    margin-top: 435px;
-    position: absolute;
-    width: 100%;
-    background: linear-gradient(
-      to bottom,
-      rgba(20, 20, 20, 0),
-      rgb(20, 20, 20)
-    );
-    backdrop-filter: blur(4px);
-  }
-  .overviewContainer {
-    padding: 20px 40px;
+.blurContainer {
+  height: 50px;
+  margin-top: 435px;
+  position: absolute;
+  width: 100%;
+  background: linear-gradient(to bottom, rgba(20, 20, 20, 0), rgb(20, 20, 20));
+  backdrop-filter: blur(4px);
+}
+.overviewContainer {
+  padding: 20px 40px;
+  display: flex;
+  gap: 40px;
+  font-family: Ubuntu;
+  word-spacing: 2px;
+
+  .firstColumn {
     display: flex;
-    gap: 40px;
-    font-family: Ubuntu;
-    word-spacing: 2px;
+    flex-direction: column;
+    gap: 15px;
+    width: 70%;
 
-    .firstColumn {
+    .statsContainer {
       display: flex;
-      flex-direction: column;
-      gap: 15px;
-      width: 70%;
-
-      .statsContainer {
-        display: flex;
-        color: white;
-        font-size: 20px;
-        gap: 15px;
-
-        .matchPercentage {
-          color: #4ba861;
-          font-weight: bold;
-        }
-
-        .icons {
-          display: flex;
-          gap: 8px;
-        }
-      }
-      .movieTitle {
-        color: white;
-        font-size: 20px;
-      }
-      .storyDescription {
-        color: white;
-        font-size: 15px;
-        display: inline-flex;
-        line-height: 1.5;
-        word-spacing: 3px;
-        flex-wrap: wrap;
-            
-      }
-    }
-
-    .secondColumn {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      width: 0%;
       color: white;
-      padding: 0px 0px 0px 20px;
+      font-size: 20px;
+      gap: 15px;
 
-      .genresContainer {
+      .matchPercentage {
+        color: #4ba861;
+        font-weight: bold;
+      }
+
+      .icons {
         display: flex;
-        flex-direction: column;
-        width: 100%;
+        gap: 8px;
+      }
+    }
+    .movieTitle {
+      color: white;
+      font-size: 20px;
+    }
+    .storyDescription {
+      color: white;
+      font-size: 15px;
+      display: inline-flex;
+      line-height: 1.5;
+      word-spacing: 3px;
+      flex-wrap: wrap;
+    }
+  }
 
-        span {
-          font-size: 20px;
-          margin-bottom: 10px;
-        }
-        .genres {
-          display: flex;
-          align-items: center;
-          gap: 10px;
-          line-height: 10px;
-          max-height: 42px;
+  .secondColumn {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 0%;
+    color: white;
+    padding: 0px 0px 0px 20px;
 
-          .genreTitle {
-            font-size: 12px;
-            color: #ffffff;
-            font-weight: 300;
-          }
+    .genresContainer {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+
+      span {
+        font-size: 20px;
+        margin-bottom: 10px;
+      }
+      .genres {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        line-height: 10px;
+        max-height: 42px;
+
+        .genreTitle {
+          font-size: 12px;
+          color: #ffffff;
+          font-weight: 300;
         }
       }
     }
   }
-  ::-webkit-scrollbar {
-    display: none;
-  }
+}
+::-webkit-scrollbar {
+  display: none;
+}
