--- a/src/components/commons/Movie-Card/styles.module.scss
+++ b/src/components/commons/Movie-Card/styles.module.scss
@@ -42,6 +42,7 @@
       height: 100%;
       border-radius: 5px;
       object-fit: cover;
+      background-color: #cccccc;
     }
 
     .detailsContainer {
